syntax = "proto3";

package catalogservice;

option go_package = "grpc/gen";

import "proto/common/id.proto";

service CatalogService {
    rpc GetItem (common.ID) returns (Item);
}

message Item {
    string id = 1;
    string name = 2;
    string category = 3;
    float price = 4;
}