syntax = "proto3";

package orderservice;

option go_package = "grpc/gen";

import "proto/common/id.proto";

service OrderService {
    rpc CreateOrder (common.ID) returns (Order);
    rpc PayOrder (common.ID) returns (Order);
}

message Order {
    string id = 1;
    string item_id = 2;
}